<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map"
        android:title="@string/menu_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_pick_city"
        android:icon="@drawable/ic_place"
        android:title="@string/menu_change_location"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_my_location"
        android:checkable="true"
        android:icon="@drawable/ic_my_location"
        android:title="@string/menu_use_my_location"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sources"
        android:title="@string/menu_sources"
        app:showAsAction="never" />
</menu>
